upgrade to java 22